--- a/public/sass/page/_contact.scss
+++ b/public/sass/page/_contact.scss
@@ -1,5 +1,5 @@
 #contact {
-    background: url(../img/bg_img_contact.png) no-repeat center 90% /calc(284/320*100%) fixed $ac;
+    background: url(../img/bg_img_contact.png) no-repeat center 80% /calc(284/320*100%) fixed $ac;
     text-align: center;
 }
 
@@ -28,7 +28,7 @@
         display: inline;
         width: auto;
         margin: 0;
-        background: url(../img/icon_mail_black.svg) no-repeat center 10px;
+        background: url(../img/icon_mail.svg) no-repeat center 10px;
         padding: 35px 10px 10px 10px;
     }
 }
