あとこれだけ：jsの調整

--- a/public/sass/layout/_main.scss
+++ b/public/sass/layout/_main.scss
@@ -8,6 +8,7 @@
 #mv {
     text-align: center;
     background: url(../img/bg.jpg) no-repeat center center;
+    padding: 50px 15px;
     a {
         margin-top: 10px;
         text-decoration: none;
