--- a/public/sass/page/_gallery.scss
+++ b/public/sass/page/_gallery.scss
@@ -1,4 +1,5 @@
 #gallery {
+    height: 700px;
     background: url(../img/bg_img_creation.png) no-repeat 90% 10% /calc(137/320*100%) fixed, url(../img/bg.jpg) no-repeat center center;
 }
 
