--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,18 +124,16 @@ img {
   height: auto;
   vertical-align: bottom; }
 
-#mv,
 #profile,
 #gallery,
 #skill,
 #contact {
   padding: 50px 15px; }
-
-#profile p,
-#gallery p,
-#skill p,
-#contact p {
-  margin: 25px 0; }
+  #profile p,
+  #gallery p,
+  #skill p,
+  #contact p {
+    margin: 25px 0; }
 
 @media screen and (min-width: 768px) {
   html,
@@ -161,6 +159,7 @@ img {
   #gallery,
   #skill,
   #contact {
+    padding: 0 15px;
     width: 100%;
     height: 100vh;
     font-size: 1.6rem;
@@ -365,7 +364,8 @@ img {
 
 #mv {
   text-align: center;
-  background: url(../img/bg.jpg) no-repeat center center; }
+  background: url(../img/bg.jpg) no-repeat center center;
+  padding: 50px 15px; }
   #mv a {
     margin-top: 10px;
     text-decoration: none;
@@ -597,34 +597,38 @@ img {
 @media screen and (min-width: 768px) {
   .sec-title {
     margin: 0;
-    margin-left: 60%; } }
-
-@media screen and (min-width: 1200px) {
-  .sec-title {
-    margin: 0;
-    margin-left: 75%; } }
+    position: absolute;
+    top: 10%;
+    right: 7%; }
+  #profile .sec-title {
+    position: absolute;
+    top: 10%;
+    right: 12.5%; } }
 
 #profile {
   background: url(../img/bg_img_profile.png) no-repeat 90% 10%/calc(137/320*100%) fixed, url(../img/bg.jpg) no-repeat center center; }
-  #profile p:first-of-type {
-    margin-top: 10px; }
-  #profile p:last-of-type {
-    margin-bottom: 0; }
+  #profile p {
+    display: inline;
+    margin: 2px 0; }
+  #profile .txt-abc {
+    padding: 10px 0; }
+    #profile .txt-abc:first-of-type {
+      padding-top: 5px; }
 
 @media screen and (min-width: 768px) {
   #profile {
     background: url(../img/bg_hana_profile.png) no-repeat 95% 90%/calc(100/1200*100%); }
     #profile p {
-      display: inline;
-      line-height: 2.5;
-      padding: 0 5px;
-      background-color: #fff; }
-    #profile p:first-of-type {
-      margin-top: 0; } }
+      display: inline-block;
+      padding: 5px 2px;
+      background-color: #fff;
+      margin: 0 5px; }
+  .txt-abc {
+    padding: 0; } }
 
 @media screen and (min-width: 1200px) {
   .txt-abc {
-    margin: 10px 40px 0 40px; }
+    margin: 0 40px; }
     .txt-abc:first-of-type {
       margin-right: 0; } }
 
@@ -651,6 +655,7 @@ img {
     line-height: 3; } }
 
 #gallery {
+  height: 700px;
   background: url(../img/bg_img_creation.png) no-repeat 90% 10%/calc(137/320*100%) fixed, url(../img/bg.jpg) no-repeat center center; }
 
 .illust,
