--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -26,18 +26,11 @@
         vertical-align: bottom;
     }
     
-    #mv,
     #profile,
     #gallery,
     #skill,
     #contact {
         padding: 50px 15px;
-    }
-    
-    #profile,
-    #gallery,
-    #skill,
-    #contact {
         p {
             margin: 25px 0;
         }
@@ -65,6 +58,7 @@
         #gallery,
         #skill,
         #contact {
+            padding: 0 15px;
             width: 100%;
             height: 100vh;
             font-size: 1.6rem;
