--- a/public/sass/page/_profile.scss
+++ b/public/sass/page/_profile.scss
@@ -1,10 +1,14 @@
 #profile {
     background: url(../img/bg_img_profile.png) no-repeat 90% 10% /calc(137/320*100%) fixed, url(../img/bg.jpg) no-repeat center center;
-    p:first-of-type {
-        margin-top: 10px;
+    p {
+        display: inline;
+        margin: 2px 0;
     }
-    p:last-of-type {
-        margin-bottom: 0;
+    .txt-abc {
+        padding: 10px 0;
+        &:first-of-type {
+            padding-top: 5px;
+        }
     }
 }
 
@@ -13,21 +17,21 @@
     #profile {
         background: url(../img/bg_hana_profile.png) no-repeat 95% 90%/calc(100/1200*100%);
         p {
-            display: inline;
-            line-height: 2.5;
-            padding: 0 5px;
+            display: inline-block;
+            padding: 5px 2px;
             background-color: #fff;
+            margin: 0 5px;
         }
-        p:first-of-type {
-            margin-top: 0;
-        }
+    }
+    .txt-abc {
+        padding: 0;
     }
 }
 
 //PC用CSS---------------------------------------
 @media screen and (min-width: 1200px) {
     .txt-abc {
-        margin: 10px 40px 0 40px;
+        margin: 0 40px;
         &:first-of-type {
             margin-right: 0;
         }
