--- a/public/sass/module/_title.scss
+++ b/public/sass/module/_title.scss
@@ -16,6 +16,10 @@
         background-color: #fff;
     }
     
+    #gallery .txt-title {
+        margin-top: 20px;
+}
+    
     #profile {
         .sec-title {
             width: 135px;
