--- a/public/sass/page/_contact.scss
+++ b/public/sass/page/_contact.scss
@@ -24,6 +24,9 @@
             line-height: 3;
         }
     }
+    .con_annoce {
+        padding: 5px 2px;
+    }
     .con_adress {
         display: inline;
         width: auto;
