--- a/public/sass/page/_gallery.scss
+++ b/public/sass/page/_gallery.scss
@@ -1,6 +1,11 @@
 #gallery {
-    height: 700px;
     background: url(../img/bg_img_creation.png) no-repeat 90% 10% /calc(137/320*100%) fixed, url(../img/bg.jpg) no-repeat center center;
+    @media screen and (max-width: 768px) {
+        height: auto !important;
+        .fp-tableCell {
+            height: auto !important;
+        }
+    }
 }
 
 .illust,
@@ -52,6 +57,7 @@
     }
     .illust,
     .design {
+        padding: 20px 0 10px 0;
         margin: 0;
         justify-content: flex-start;
         a {
