--- a/public/sass/layout/_main.scss
+++ b/public/sass/layout/_main.scss
@@ -6,22 +6,27 @@
 }
 
 #mv {
+    position: relative;
     text-align: center;
     background: url(../img/bg.jpg) no-repeat center center;
-    padding: 50px 15px;
     a {
         margin-top: 10px;
         text-decoration: none;
         font-weight: bold;
         color: #333;
         &:hover {
-            color: #fff;
+            color: #6d0000;
         }
     }
 }
 
 .mv-box {
-    padding: 50% 0;
+    width: calc(300/320*100%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto;
 }
 
 .re-768 {
@@ -30,6 +35,7 @@
 
 .re-320 {
     margin-top: 10px;
+    font-size: 2.5rem;
 }
 
 //TAB用CSS---------------------------------------
@@ -65,6 +71,7 @@
     }
     .mv-box {
         width: calc(500/1200*100%);
+        min-width: 400px;
         height: auto;
         background: url(../img/head_mv_bg.jpg) no-repeat center top/contain;
         position: absolute;
@@ -86,5 +93,6 @@
         top: 77%;
         transform: translate(-50%, -50%);
         margin: auto;
+        font-size: 3rem;
     }
 }
