--- a/public/sass/module/_title.scss
+++ b/public/sass/module/_title.scss
@@ -16,10 +16,6 @@
         background-color: #fff;
     }
     
-    #gallery .txt-title {
-        margin-top: 20px;
-}
-    
     #profile {
         .sec-title {
             width: 135px;
@@ -42,5 +38,10 @@
                 top: 10%;
                 right: 12.5%;
             }
+        }
+        .design {
+            display: inline-block;
+            line-height: 1.3;
+            margin: 0 20px 0 0;
         }
     }
