--- a/public/sass/layout/_nav.scss
+++ b/public/sass/layout/_nav.scss
@@ -158,7 +158,7 @@
     right: 0;
     bottom: 10px;
     &:hover {
-        background-color: #6d0000;
+        background-color: $ac2;
     }
 }
 
