--- a/public/sass/module/_title.scss
+++ b/public/sass/module/_title.scss
@@ -11,7 +11,7 @@
     
     .txt-title {
         display: inline;
-        line-height: 3;
+        line-height: 1;
         padding: 5px;
         background-color: #fff;
     }
@@ -42,6 +42,6 @@
         .design {
             display: inline-block;
             line-height: 1.3;
-            margin: 0 20px 0 0;
+            margin: 0 20px 0 10px;
         }
     }
