--- a/public/css/style.css
+++ b/public/css/style.css
@@ -590,7 +590,7 @@ img {
 
 .txt-title {
   display: inline;
-  line-height: 3;
+  line-height: 1;
   padding: 5px;
   background-color: #fff; }
 
@@ -612,7 +612,7 @@ img {
   .design {
     display: inline-block;
     line-height: 1.3;
-    margin: 0 20px 0 0; } }
+    margin: 0 20px 0 10px; } }
 
 #profile {
   background: url(../img/bg_img_profile.png) no-repeat 90% 10%/calc(137/320*100%) fixed, url(../img/bg.jpg) no-repeat center center; }
@@ -679,7 +679,7 @@ img {
   .sakuhin a {
     display: block;
     width: calc(80/320*100%);
-    margin: 0 5px 10px 5px; }
+    margin: 0 5px 10px; }
 
 #bg {
   position: fixed;
@@ -687,7 +687,7 @@ img {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 100; }
 
 #photo {
