--- a/public/sass/page/_gallery.scss
+++ b/public/sass/page/_gallery.scss
@@ -10,7 +10,7 @@
     a {
         display: block;
         width: calc(80/320*100%);
-        margin: 0 5px 10px 5px;
+        margin: 0 5px 10px;
     }
 }
 
@@ -21,7 +21,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .4);
+    background-color: rgba(0, 0, 0, .8);
     z-index: 100;
 }
 
@@ -54,7 +54,3 @@
     }
 }
 
-//pc用CSS--------------------------------------- 
-@media screen and (min-width: 1200px) {
-    
-}
