--- a/public/sass/page/_gallery.scss
+++ b/public/sass/page/_gallery.scss
@@ -63,7 +63,7 @@
     .sakuhin {
         justify-content: flex-start;
         a {
-            width: 60px;
+            width: 40px;
         }
     }
     #photo {
@@ -89,6 +89,15 @@
             &:hover {
                 color: $ac;
             }
+        }
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .sakuhin {
+        justify-content: flex-start;
+        a {
+            width: 60px;
         }
     }
 }
