--- a/public/sass/page/_gallery.scss
+++ b/public/sass/page/_gallery.scss
@@ -79,7 +79,7 @@
         max-width: 500px;
     }
     .git {
-        margin-right: 30px;
+        margin-right: 0;
     }
     .link-git {
         width: auto;
